<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/top_background"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:background="@color/primary_purple"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@id/bill_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.3"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/text_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/top_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/top_background" />

        <TextView
            android:id="@+id/bill_label"
            style="@style/TextStyle.NormalText.EditTextLabel"
            android:text="@string/bill_amount"
            app:layout_constraintBottom_toTopOf="@id/bill_input_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_background" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bill_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/bill_hint"
            android:minHeight="48dp"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/gray"
            app:layout_constraintBottom_toTopOf="@id/select_tip_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bill_label">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bill_input"
                style="@style/TextInputStyle"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/select_tip_label"
            style="@style/TextStyle.NormalText.EditTextLabel"
            android:text="@string/satisfaction"
            app:layout_constraintBottom_toTopOf="@id/tip_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bill_input_layout" />

        <!--    TIP SELECTION BUTTONS    -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/tip_10"
            style="@style/DefaultButton.TipSelection"
            android:layout_marginStart="16dp"
            android:text="@string/tip_10"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@id/tip_25"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tip_15"
            app:layout_constraintTop_toBottomOf="@id/select_tip_label">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tip_15"
            style="@style/DefaultButton.TipSelection"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tip_15"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@id/tip_30"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/tip_10"
            app:layout_constraintRight_toLeftOf="@id/tip_20"
            app:layout_constraintTop_toBottomOf="@id/select_tip_label">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tip_20"
            style="@style/DefaultButton.TipSelection"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tip_20"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@id/tip_35"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/tip_15"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_tip_label">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tip_25"
            style="@style/DefaultButton.TipSelection"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tip_25"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@id/round_up_tip"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tip_30"
            app:layout_constraintTop_toBottomOf="@id/tip_10">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tip_30"
            style="@style/DefaultButton.TipSelection"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tip_30"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@id/round_up_tip"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/tip_25"
            app:layout_constraintRight_toLeftOf="@id/tip_35"
            app:layout_constraintTop_toBottomOf="@id/tip_15">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tip_35"
            style="@style/DefaultButton.TipSelection"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tip_35"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@id/round_up_tip"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/tip_30"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_20">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/round_up_tip"
            style="@style/CheckBoxStyle"
            android:text="@string/round_up_my_tip"
            app:layout_constraintBottom_toTopOf="@id/calculate_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_25">
        </com.google.android.material.checkbox.MaterialCheckBox>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate_button"
            style="@style/DefaultButton"
            android:text="@string/calculate_btn"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@id/response_img"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_up_tip">
        </com.google.android.material.button.MaterialButton>

        <ImageView
            android:id="@+id/response_img"
            android:layout_width="140dp"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@null"
            android:src="@drawable/img_hello"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/your_tip_label"
            app:layout_constraintTop_toBottomOf="@id/calculate_button" />

        <TextView
            android:id="@+id/your_tip_label"
            style="@style/TextStyle.NormalText"
            android:text="@string/your_tip"
            app:layout_constraintBottom_toTopOf="@id/calculated_tip"
            app:layout_constraintLeft_toRightOf="@id/response_img"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/calculated_tip"
            style="@style/TextStyle.NormalText.CalculatedTip"
            android:text="@string/calculated_tip"
            app:layout_constraintBottom_toTopOf="@id/total_bill_label"
            app:layout_constraintLeft_toRightOf="@id/response_img"
            app:layout_constraintTop_toBottomOf="@id/your_tip_label" />

        <TextView
            android:id="@+id/total_bill_label"
            style="@style/TextStyle.NormalText"
            android:text="@string/your_final_total_bill"
            app:layout_constraintBottom_toTopOf="@id/total_bill"
            app:layout_constraintLeft_toRightOf="@id/response_img"
            app:layout_constraintTop_toBottomOf="@id/calculated_tip" />

        <TextView
            android:id="@+id/total_bill"
            style="@style/TextStyle.NormalText.FinalBill"
            android:text="@string/final_bill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/response_img"
            app:layout_constraintTop_toBottomOf="@id/total_bill_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>